More snippets for Railo/Tomcat setup